syntax = "proto3";

package controller.servers.v1;

import "controller/storage/timestamp/v1/timestamp.proto";

option go_package = "github.com/hashicorp/boundary/internal/servers;servers";

// Server contains all fields related to a Controller or Worker resource
message Server {
  // Private ID of the resource
  string private_id = 10 [deprecated = true];

  // Type of the resource (controller, worker)
  string type = 20;

  // Name of the resource. This is deprecated because we ended up setting the
  // private ID and name to be identical, and there is currently no reason we
  // can think of to allow a given server's name to match another within the
  // same cluster. So we simply use the private ID and deprecate this.
  // @inject_tag: `gorm:"-"`
  string name = 30 [deprecated = true];

  // Description of the resource
  string description = 40 [deprecated = true];

  // Address for the server
  string address = 50 [deprecated = true];

  // First seen time from the RDBMS
  storage.timestamp.v1.Timestamp create_time = 60 [deprecated = true];

  // Last time there was an update
  storage.timestamp.v1.Timestamp update_time = 70 [deprecated = true];

  // Tags for workers
  // @inject_tag: `gorm:"-"`
  map<string, TagValues> tags = 80;
}

// TagValues is used because map fields cannot be repeated but can be a
// message
message TagValues {
  repeated string values = 10;
}

message ServerController {
  // Private ID of the resource
  string private_id = 10;

  // Address for the controller
  string address = 20;

  // Description of the resource (optional)
  // @inject_tag: `gorm:"default:null"`
  string description = 30;

  // First seen time from the RDBMS
  storage.timestamp.v1.Timestamp create_time = 40;

  // Last time there was an update
  storage.timestamp.v1.Timestamp update_time = 50;
}

message ServerWorkerStatus {
  // Public ID of the worker
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 10;

  // The create_time is set by the database.
  // @inject_tag: `gorm:"default:current_timestamp"`
  storage.timestamp.v1.Timestamp create_time = 20;

  // The update_time is set by the database.
  // @inject_tag: `gorm:"default:current_timestamp"`
  storage.timestamp.v1.Timestamp update_time = 30;

  // Name of the resource (optional)
  // @inject_tag: `gorm:"default:null"`
  string name = 40;

  // Address for the worker. This must be set.
  // @inject_tag: `gorm:"default:null"`
  string address = 50;
}
